[GTK/WPE] Web Inspector: crash in remote web inspector when connection closed during data transfer https://bugs.webkit.org/show_bug.cgi?id=265304

Reviewed by Carlos Garcia Campos.

It seems that after closing remote web inspector connection it is possible that some of messages
can be still sent from WebProcess to UIProcess and in RemoteInspectorServer::sendMessageToFrontend
there can be a crash because of missing socketConnection which was removed by previous closing
remote web inspector connection(RemoteInspectorServer::close).

* Source/JavaScriptCore/inspector/remote/glib/RemoteInspectorServer.cpp:
(Inspector::RemoteInspectorServer::sendMessageToFrontend):

Canonical link: https://commits.webkit.org/271097@main